@@ -37,7 +37,7 @@ AC_DEFINE_UNQUOTED(BUILD_NUMBER, $BUILD_NUMBER,[fix])
 dnl ###########################################################################
 dnl   This is to check correct gconf installation
 dnl ###########################################################################
-SCHEMA_AGE=31
+SCHEMA_AGE=32
 dnl increment this number if you add anything to the schema file
 AC_SUBST(SCHEMA_AGE)
 
