@@ -5,6 +5,7 @@ Main GUI :
 * Defaults to h323: or callto: if no url handler is specified and automatically rewrites the URL in the GUI
 * Improved the incoming call dialog so that it displays the remote URL (either the IP or the remote party number or the remote alias).
 * Added a speed dials submenu in the Call menu. All users for which you are adding a speed dial in the addressbook will be listed there, that gives a fast and easy way to call your friend or to transfer any existing call to them.
+* Do not display DTMF's in the URL bar during calls.
 
 Addressbook :
 
@@ -13,6 +14,9 @@ Addressbook :
 * Keep the last selected page as current when deleting, adding or renaming a group or a server. 
 * Automatically enable the current group in the groups list when adding a new contact.
 * Added a menu entry to the right-click menu to copy the URL of the currently selected contact to the clipboard. 
+
+Preferences :
+* Added a way to change the gatekeeper registration TTL.
 
 Calls history:
 
