@@ -1,6 +1,18 @@
 2003-11-11 Damien Sandras  <dsandras@seconix.com>
 
 	* NEWS: Updated with CVS news.
+
+	* configure.in, gnomemeeting.schemas.in.in, src/endpoint.cpp,
+	src/endpoint.h, src/gatekeeper.cpp, src/gatekeeper.h,
+	src/pref_window.cpp: Added support to set the gatekeeper registration
+	TTL.
+	
+	* src/main_window.cpp: Do not display dialed DTMF's in the URL
+	bar during calls.
+	
+2003-11-11 Damien Sandras  <dsandras@seconix.com>
+
+	* NEWS: Updated with CVS news.
 	
 2003-11-11 Damien Sandras  <dsandras@seconix.com>
 
